Recent Work from 11.02.: Added PoS-Head, Fixed several Multi-Thread issues
Configuration: HybridCue + CRFScope -> "test" and "train" corpi